index.css
body {
  font-family: pragmatica, sans-serif;
  font-weight: 400;
  font-style: normal;


  font-size: 16px;
  line-height: 22px;
  margin: 0;
}

h1 {
  font-family: pragmatica-extended, Arial, sans-serif;
  font-weight: 700;
  font-style: normal;
  /* scales font between 1 and 2 ems depending on screen size */
  font-size: calc(16px + (32 - 16) * ((100vw - 300px) / (1600 - 300)));

  text-transform: uppercase;
  line-height: 1.2em;
  padding: 16px 32px;
}

.centerContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

section {
  padding: 16px 32px;
}

section#aboveFold {
  min-height: 100vh;
  display: flex;
  flex-direction: column;

  padding: 0;
  box-sizing: border-box;

  background-color: black;
  color: white;
}

.selectorContainer {
  flex-grow: 1;
  flex-shrink: 1;
}

.videoVisible .selectorContainer {
  flex-grow: 0;
}

.videoHidden .videoContainer {
  display: none;
}

.videoContainer {
  flex-grow: 1;
  position: relative;
}

.videoInnerContainer {
  /* all this stuff ensures the video fits vertically
  on wide screens */
  max-width: calc(177vh - 100px);
  width: 100%;
  height: 100%;
}

#selector {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
}

#selector > * {
  flex-shrink: 1;
  display: inline-block;
  flex-basis: 88px;
  padding: 11px;
  margin-right: 11px;

  transition: opacity 100ms ease;
}

.videoVisible #selector > * {
  flex-basis: 44px;
}

#selector img {
  max-width: 100%;
  max-height: 100%;
  transition: all 100ms ease;
}

.videoVisible #selector a, #selector:hover a {
  opacity: 0.5;
  animation: none !important;
}

@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1
  }
}

@keyframes pulse {
  from {
    opacity: 0.5;
  }

  to {
    opacity: 1
  }
}

#selector a, h1 {
  animation: 1s ease-in 0s 1 backwards fadein;
}
h1 {
  animation-delay: 2s;
}

#selector a.fadeinEnded {
  /* remove animation after ended
  otherwise it iterferes with putting on another animation
  if that animation is removed the fade in restarts from the beginning.
  This fixes that. */
  animation: none;
}

#selector a:nth-child(1) {
  animation-delay: 500ms;
}
#selector a:nth-child(2) {
  animation-delay: 1000ms;
}
#selector a:nth-child(3) {
  animation-delay: 1500ms;
}

.videoHidden #selector a.fadeinEnded:first-child {
  animation: 1.5s ease-in-out 1s alternate-reverse infinite pulse;
}

#selector:hover a:hover {
  opacity: 1;
}

.forgivenessShown a#forgivenessLink {
  opacity: 1
}

.hardshipShown a#hardshipLink {
  opacity: 1
}

.defaultShown a#defaultLink {
  opacity: 1
}

.pieceTitle {
  font-weight: 700;
}

.textContainer {
  max-width: 1200px;
  margin: auto;
}

.bodyLayout {
  display: flex;
  flex-direction: row;
}

.artistStatement {
  flex-shrink: 1;
  flex-grow: 1;
  margin-right: 4em;
}

.loanTerms {
  flex-basis: 400px;
  flex-shrink: 0;
  flex-grow: 0;
  font-size: 12px;
}

.loanTerms b {
  color: #bb0000;
  font-weight: inherit;
}

.loanTermHeading {
  font-family: pragmatica-extended, Arial, sans-serif;
  font-weight: 700;
  font-style: normal;
  text-transform: uppercase;
  font-size: 90%;
}

@media screen and (max-width: 864px) {
  .bodyLayout {
    display: block;
  }
}

